test/fail/NumbersAsIds.ma
--2010-06-25 feature "numbers as ids" removed, numbers are now sizes
data 3 : Set
{ 0 : 3
; 1 : 3
; 2 : 3
}

